@@ -1,5 +1,8 @@
 Revision history for local::lib
 
+        - Stop Makefile.PL exploding if your CPAN is too old to have
+          CPAN::HandleConfig. Needed when installing local::lib via CPAN
+          using an old CPAN version (t0m)
         - Fix warning from Makefile.PL about ExtUtils::MakeMaker::prompt (t0m)
         - Set PERL5LIB back to calculated @INC with --self-contained, to stop
           invoking other perl scripts from losing the local::lib if they
